--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,14 +2,21 @@
 
 <div class="contenedor-productos">
     {{#each productos}}
-        <div class="card">
-            <img src="{{this.img}}" alt="{{this.title}}" class="img-card">
-            <h2 class="card-title"> {{this.title}} </h2>
-            <p> {{this.description}} </p>
-            <p> ${{this.price}} </p>
-            <button class="btn-card">Agregar al carrito</button>
-        </div>
+    <div class="card">
+        <img src="{{this.img}}" alt="{{this.title}}" class="img-card">
+        <h2 class="card-title"> {{this.title}} </h2>
+        <p> {{this.description}} </p>
+        <p> ${{this.price}} </p>
+        <button class="btn-card">Agregar al carrito</button>
+    </div>
     {{/each}}
-</div>
 
- 
+    {{#if hasNextPage}}
+    <a href="/products?page={{nextPage}}"> Siguiente </a>
+    {{/if}}
+    {{#if hasPrevPage}}
+    <a href="/products?page={{prevPage}}"> Anterior </a>
+    {{/if}}
+
+    <p>Pagina {{currentPage}} de {{totalPages}} </p>
+</div>
